[package]
name = "fpick"
version = "0.7.6"
license = "MIT"
edition = "2021"
description = "Interactive file picker"
repository = "https://github.com/igrek51/fpick"
homepage = "https://github.com/igrek51/fpick"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
chrono = "0.4.38"
crossterm = "0.28.1"
itertools = "0.13.0"
ratatui = "0.29.0"
relative-path = "1.9.3"
signal-hook = "0.3.17"
textwrap = "0.16.1"

[[bin]]
name = "fpick"
path = "src/main.rs"
